<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etdNestatura"
        android:layout_width="206dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/hintEstatura"
        android:inputType="numberDecimal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668" />

    <EditText
        android:id="@+id/etdNCintura"
        android:layout_width="206dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/hintCintura"
        android:inputType="numberDecimal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749" />

    <EditText
        android:id="@+id/etdNcadera"
        android:layout_width="204dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/hintCadera"
        android:inputType="numberDecimal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.828" />

    <Spinner
        android:id="@+id/opciones_spinner"
        android:layout_width="281dp"
        android:layout_height="23dp"
        android:entries="@array/opcionesSpinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvTxt"
        android:layout_width="341dp"
        android:layout_height="73dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <RadioGroup
        android:id="@+id/radioSexo"
        android:layout_width="229dp"
        android:layout_height="29dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radio_masculino"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginRight="16dp"
            android:checked="true"
            android:onClick="clicRB"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/radio_femenino"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:checked="false"
            android:onClick="clicRB"
            android:text="@string/femenino" />

    </RadioGroup>

    <ImageView
        android:id="@+id/iVFormula"
        android:layout_width="215dp"
        android:layout_height="127dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269"
        app:srcCompat="@drawable/lapiz" />

    <TextView
        android:id="@+id/tVDescripcion"
        android:layout_width="334dp"
        android:layout_height="90dp"
        android:text="Descripción formula"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466" />

    <EditText
        android:id="@+id/etdNPeso"
        android:layout_width="210dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/hintPeso"
        android:inputType="numberDecimal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588" />

    <Button
        android:id="@+id/btnCalcula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calcular"
        android:text="@string/txtBtnCalcularF1"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

</androidx.constraintlayout.widget.ConstraintLayout>